--- a/stylesheetkatom.css
+++ b/stylesheetkatom.css
@@ -2,6 +2,7 @@ body{ margin:5px 5px;
       font-size:22px;
       background-color:black;
       color:white;
+	width:100%;
 
 font-family:monospace,monospace;
 	font-weight:;
